fix: scrollbar bug

--- a/client/index.scss
+++ b/client/index.scss
@@ -296,7 +296,7 @@ body {
 
   #properties-container {
     margin-left: 10vw;
-    margin-right: 8vw;
+    margin-right: 7vw;
     padding-top: 5vh;
   }
 
@@ -323,7 +323,7 @@ body {
     color: black;
     opacity: .7;
     float: right;
-    margin-right: 3vw;
+    margin-right: 4vw;
   }
 
   #nav-contact-link {
